--- a/src/css/index.css
+++ b/src/css/index.css
@@ -74,3 +74,25 @@ img {-webkit-touch-callout:none;}
   font-size: 0.9rem;
   color: #5a5f66;
 }
+
+.swiper {
+  /* width: 100%; */
+  margin: 20px 30px;
+  height: auto;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
